--- a/web/index.html
+++ b/web/index.html
@@ -106,7 +106,7 @@
     </div>
 
     <script type="module">
-        import init, { WebHandle } from './bingtray_core.js';
+        import init, { WebHandle } from './bingtray.js';
 
         async function run() {
             // Initialize the wasm module
